style.css
@font-face {
  font-family: Lato;
  font-weight: 100;
  src: url(fonts/lato-hairline.woff);
}

@font-face {
  font-family: Lato;
  font-weight: 200;
  src: url(fonts/lato-thin.woff);
}

@font-face {
  font-family: Lato;
  font-weight: 300;
  src: url(fonts/lato-light.woff);
}

@font-face {
  font-family: Lato;
  font-weight: 400;
  src: url(fonts/lato-regular.woff);
}

@font-face {
  font-family: Lato;
  font-weight: 500;
  src: url(fonts/lato-medium.woff);
}

@font-face {
  font-family: Lato;
  font-weight: 600;
  src: url(fonts/lato-semibold.woff);
}

@font-face {
  font-family: Lato;
  font-weight: 700;
  src: url(fonts/lato-bold.woff);
}

@font-face {
  font-family: Lato;
  font-weight: 800;
  src: url(fonts/lato-heavy.woff);
}

@font-face {
  font-family: Lato;
  font-weight: 900;
  src: url(fonts/lato-black.woff);
}

* {
  margin: 0;
  padding: 0;
}

body {
  font: 400 24px/100% Lato;
  color: #222;
}

#introduction {
  position: relative;
  margin: 0 auto;
  width: 50vw;
  height: 65vh;
}

#introduction > div {
  position: absolute;
  bottom: 10%;
  width: 100%;
  text-align: center;
}

#introduction h1 {
  font: 600 30px/100% Lato;
}

#introduction p {
  margin-top: 11px;
  font-weight: 300;
}

#introduction #cells {
  position: relative;
  margin-top: 24px;
  transform: rotate(-5deg);
  width: 100%;
  height: 220px;
  border-radius: 4px;
}

#introduction ul {
  margin-top: 40px;
  font: 400 18px/100% Lato;
  list-style-type: none;
  text-align: center;
}

#introduction li {
  display: inline;
  padding: 0 8px;
}

#introduction li a {
  text-decoration: none;
  color: #33d;
  outline: none;
}

#introduction li a:visited {
  color: #33d;
}

#introduction li a:hover {
  color: #222;
}

#introduction li a:active {
  color: #222;
}

#works {
  padding-bottom: 80px;
}

#works ul {
  margin: 0 auto;
  width: 70vw;
  list-style-type: none;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

#works li {
  margin: 8px;
}

#works li a {
  padding: 4px 10px;
  border-radius: 8px;
  background-color: #fbfbfb;
  font: 400 16px/100% Lato;
  text-decoration: none;
  color: #999;
}

#works li a:hover {
  background-color: #f7f7f7;
  color: #222;
}

#works li a:active {
  background-color: #fcfcfc;
  color: #bbb;
}

#exhibit {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: #fff;
}

#exhibit .close {
  position: absolute;
  top: 40px;
  right: 40px;
  width: 60px;
  height: 60px;
  border: 0;
  background: transparent;
  font: inherit;
  font-size: 40px;
  color: #a8a2a2;
  cursor: pointer;
  outline: none;
}

#exhibit .close:hover {
  color: #222;
}

#exhibit .close:active {
  color: #c8c2c2;
}

#exhibit .content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 60vw;
  text-align: center;
}

#exhibit .media {
  width: 100%;
  height: 60px;
  margin: 20px auto 0;
}

